tests/invalid/seq_compare_bytearray_type_mismatch/main.py
def main() -> None:
    a: bytearray = bytearray(b"hello")
    b: str = "hello"
    c: bool = a == b
